first real commit to tabemono-nyc website

--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Tabemono NYC</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-sup bro?
-</body>
+  <head>
+    <title>Tabemono NYC</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/c548726a99.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">  
+    <link href="./style.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="nav links-pages">
+      <a class="links-web-title" href="https://ffm.to/tabemonoenergy.ois?fbclid=IwAR32xRI94xH3IWrivbxTTCJmCSeLlwMW8ABLrn-Z8mjiEPUvGkf-xXhEF3Q">Tabemono</a>
+      <a class="links-web-item active" href="./index.html" disabled>Home</a>
+      <a class="links-web-item" href="./about.html">Bio</a>
+      <a class="links-web-item" href="./contacts.html">Contacts</a>
+    </div>
+    <div>
+        <img class="media" src="media/gif/energy_v2_4.gif" />
+    </div>
+    <div class="nav links-music">
+      <a id="spotify" class="fa fa-spotify" href="https://open.spotify.com/artist/0rFDGYRC8gGyeJqkD4L2kR?si=Q5u4Fk_lSRGVEKm47iq-_w"></a>
+      <a id="bandcamp" class="fa fa-bandcamp" href="https://tabemononyc.bandcamp.com/"></a>
+      <a id="soundcloud" class="fa fa-soundcloud" href="https://soundcloud.com/tabemono_nyc"></a>
+      <a id="applemusic" class="fa fa-apple" href="https://music.apple.com/us/artist/tabemono/1357110237"></a>
+      <a id="instagram" class="fa fa-instagram" href="https://www.instagram.com/tabemononyc"></a>
+      <a id="facebook" class="fa fa-facebook-square" href="https://www.facebook.com/tabemonoNYC/"></a>
+    </div>
+  </body>
 </html>
+  
